<resources>
    <string name="app_name">Tutron</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_as_student">Register as Student</string>
    <string name="register_as_tutor">Register as Tutor</string>
    <string name="tutron">Tutron</string>
    <string name="student_registration">Student Registration</string>
    <string name="fill_in_the_following_information">Fill in the following information.</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="payment_info">Payment Info</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="submit">Submit</string>
    <string name="tutor_registration">Tutor Registration</string>
    <string name="fill_in_the_following_information_scroll_down_to_submit">Fill in the following information. Scroll down to submit!</string>
    <string name="tutoring_details">Tutoring Details</string>
    <string name="native_language">Native language:</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="education_level">Education level:</string>
    <string name="high_school_diploma">High School Diploma</string>
    <string name="bachelor_s_degree">Bachelor’s Degree</string>
    <string name="master_s_degree">Master’s Degree</string>
    <string name="phd">PhD</string>
    <string name="tell_us_about_your_tutoring_experience">Tell us about your tutoring experience...</string>
    <string name="welcome">Welcome!</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="log_off">Log off</string>
    <string name="welcome_student">Welcome, student!</string>
    <string name="welcome_tutor">Welcome, tutor!</string>
    <string name="dismiss">Dismiss</string>
    <string name="suspend_temporarily">Suspend Temporarily</string>
    <string name="suspend_permanently">Suspend Permanently</string>
    <string name="number_of_days">Number of days</string>
    <string name="tutor">Tutor:</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="complaints">Complaints</string>
    <string name="back">Back</string>
    <string name="days"># days</string>
    <string name="suspend_tutor">Suspend Tutor</string>
    <string name="manage_topics">Manage Topics</string>
    <string name="topics">Topics</string>
    <string name="add_topic">Add Topic</string>
    <string name="tap_to_start_stop_offering_a_topic_swipe_left_to_delete_a_topic">Tap to start/stop offering a topic. Swipe left to delete a topic.</string>
    <string name="topic_offering_status">Topic Offering Status</string>
    <string name="topic_name">Topic Name</string>
    <string name="topic_years_of_experience">Topic Years Of Experience</string>
    <string name="topic_description">Topic Description</string>
    <string name="add_a_topic_to_your_profile">Add a topic to your profile!</string>
    <string name="topic_name_lower_case">Topic name</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="describe_your_experience">Describe your experience</string>
    <string name="offered">OFFERED</string>
    <string name="tutor_item_name">Tutor Name</string>
    <string name="rating_and_number_of_lessons_given">Rating and Number of Lessons Given</string>
    <string name="tutor_item_education_level">Education Level</string>
    <string name="tutor_item_native_language">Native Language</string>
    <string name="tutor_item_description">Description</string>
    <string name="update_hourly_rate">Update Hourly Rate</string>
    <string name="rate">Rate ($)</string>
    <string name="rate_hr">Rate ($/hr)</string>
    <string name="update_your_availability">Update Your Availability</string>
    <string name="manage_lessons">Manage Lessons</string>
    <string name="set_date">Set Date</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="add_time_slot">Add Time Slot</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="search_for_tutors">Search For Tutors</string>
    <string name="fill_in_one_or_more_of_the_following_fields">Fill in one or more of the following fields.</string>
    <string name="language">Language</string>
    <string name="topic_name_search">Topic Name</string>
    <string name="search">Search</string>
    <string name="tutors">Tutors</string>
    <string name="tap_on_a_tutor_to_view_profile_and_request_lesson">Tap on a tutor to view profile and request lesson!</string>
    <string name="timeslot_description">Timeslot Description</string>
    <string name="tap_on_a_topic_to_start_your_lesson_request">Tap on a topic to start your lesson request!</string>
    <string name="tap_on_a_timeslot_to_request_a_lesson_at_that_time">Tap on a timeslot to request a lesson at that time.</string>
    <string name="scroll_through_and_tap_on_a_topic_to_start_your_lesson_request">Scroll through and tap on a topic to start your lesson request.</string>
    <string name="scroll_through_this_tutor_s_reviews">Scroll through this tutor’s reviews.</string>
    <string name="status">Status</string>
    <string name="tutorX">Tutor:</string>
    <string name="studentX">Student:</string>
    <string name="topic">Topic:</string>
    <string name="time">Time:</string>
    <string name="lessons">Lessons</string>
    <string name="tap_on_pending_lesson_to_approve_it_swipe_left_to_reject_it">Tap on pending lesson to approve it, swipe left to reject it.</string>
    <string name="anonymous">Anonymous</string>
    <string name="creation_date">Creation Date</string>
    <string name="topicX">Topic</string>
    <string name="rating">Rating</string>
    <string name="review_body">Review Body</string>
    <string name="leave_a_review">Leave a review.</string>
    <string name="rating_1_5">Rating (1-5)</string>
    <string name="share_your_thoughts">Share your thoughts...</string>
    <string name="submit_a_complaint">Submit a complaint.</string>
    <string name="what_s_wrong">What\'s wrong...</string>
</resources>