<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#E1DFDF"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewReviewItemStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewReviewItemCreationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviewItemStudentName" />

        <TextView
            android:id="@+id/textViewReviewItemTopicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topicX"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviewItemCreationDate" />

        <TextView
            android:id="@+id/textViewReviewItemRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviewItemTopicName" />

        <TextView
            android:id="@+id/textViewReviewItemBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviewItemRating" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
