<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="48sp"
        android:text="@string/welcome"/>

    <TextView
        android:id="@+id/roleIdentifierText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/you_are_logged_in_as"/>

    <Button
        android:id="@+id/btnLogOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/roleIdentifierText"
        android:layout_marginTop="30dp"
        android:text="@string/log_off" />

</RelativeLayout>
